fixed blurry images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,15 +214,20 @@ Title
 }
 
 .d-block {
-  height: 30vh;
+  height: 33vh;
   width: max-content;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+  object-fit: cover;
+
   --borderWidth: 3px;
   background: #1D1F20;
   position: relative;
   border-radius: var(--borderWidth);
+
+  image-rendering: -moz-crisp-edges;         /* Firefox */
+  image-rendering:   -o-crisp-edges;         /* Opera */
+  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor; 
 }
 
 
